# sqltui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  db.rs  event.rs  main.rs  ui.rs
