[package]
name = "sqltui"
version = "0.2.0"
edition = "2021"
description = "A terminal UI browser for SQLite databases"
license = "MIT"
repository = "https://aur.archlinux.org/packages/sqltui"
 
[[bin]]
name = "sqltui"
path = "src/main.rs"
 
[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
